<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_selector"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_selector"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_selector"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_messages_selector"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_profile"
        android:title="Profile"
        app:actionLayout="@layout/menu_profile_icon" />
</menu>